--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>G-Blast</title>
+        <title>G-Blast Solutions</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -35,9 +35,10 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 col-md-12">
                         <div class="logo">
+
                             <a href="index.html">
-                                <h1>G-Blast</h1>
-                                <!-- <img src="img/logo.jpg" alt="Logo"> -->
+
+                               <img src="img/G-Blast Solution.png" alt="Logo">
                             </a>
                         </div>
                     </div>
@@ -134,7 +135,7 @@
                         </div>
                         <div class="col-lg-7 col-md-6">
                             <div class="section-header text-left">
-                                <p>Welcome to G-Blast</p>
+                                <p>Welcome to G-Blast Solutions</p>
                             </div>
                             <div class="about-text">
                                 <p>
@@ -188,7 +189,7 @@
             <div class="container copyright">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>&copy; <a href="#">G-Blast</a>, All Right Reserved.</p>
+                        <p>&copy; <a href="#">G-Blast Solutions</a>, All Right Reserved.</p>
                     </div>
                   
                 </div>
